<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2018 The Asus-SDM660 Project
     Copyright (C) 2017-2021 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="audio">

        <org.lineageos.settings.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="-10"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain" />

        <org.lineageos.settings.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_mic"
            android:title="@string/microphone_gain" />

        <org.lineageos.settings.preferences.SecureSettingCustomSeekBarPreference 
            android:defaultValue="0"
            android:key="speaker_gain" 
            android:max="20"
            app:min="-10" 
            android:icon="@drawable/ic_speaker"
            android:title="@string/speaker_gain" />
    </PreferenceCategory>

</PreferenceScreen>
